[package]
name = "grain-drain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
crossbeam-channel = "0.5.8"
hound = "3.5.0"
noise = "0.8.2"
rand = "0.8.5"
range-lock = "0.2.3"
rayon = "1.7.0"
walkdir = "2.3.3"
